--- a/index.html
+++ b/index.html
@@ -6,14 +6,36 @@
         initial-scale=1, maximum-scale=1, minimum-scale=1" />
 
         <link rel="stylesheet" type="text/css" href="default.css">
+
+        <!--Fonts-->
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner:wght@700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@1,8..144,500&display=swap" rel="stylesheet">
     </head>
 <body>
 
     <section class="s1">
         <div class="main-container">
-            <h1>Hi, I am Omkar Raghatwan :)</h1>
-            <p> This is a sentence</p>
-            <a href="#">Link</a>
+            <div class="greeting-wrapper">
+                <h1>Hi, I am Omkar Raghatwan :)</h1>
+            </div>
+
+            <div class="intro-wrapper">
+                <div class="nav-wrapper">
+                    Nav
+                </div>
+
+                <div class="left-column">
+                    left
+                </div>
+
+                <div class="right-column">
+                    right
+                </div>
+            </div>
         </div>
     </section>
 
