--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Omkar Raghatwan</title>
+        <title>Omkar Raghatwan's PortFolio</title>
         <meta name="viewport" content="width=device-width,
         initial-scale=1, maximum-scale=1, minimum-scale=1" />
 
@@ -25,7 +25,15 @@
 
             <div class="intro-wrapper">
                 <div class="nav-wrapper">
-                    Nav
+                    <div class="dots-wrapper">
+                        <div id="dot-1" class="browser-dot"></div>
+                        <div id="dot-2" class="browser-dot"></div>
+                        <div id="dot-3" class="browser-dot"></div>
+                    </div>
+
+                    <ul id="navigation">
+                        <li><a href="#">Contact</a></li>
+                    </ul>
                 </div>
 
                 <div class="left-column">
