profile-pic and themes dots

--- a/index.html
+++ b/index.html
@@ -37,7 +37,17 @@
                 </div>
 
                 <div class="left-column">
-                    left
+                    <img id="profile_pic" src="images/omkar-1.jpg" >
+                    <h5 style="text-align: center; line-height: 0%;">Personalize Themes</h5>
+
+                    <div id="theme-options-wrapper">
+                        <div id="light-mode" class="theme-dot"></div>
+                        <div id="blue-mode" class="theme-dot"></div>
+                        <div id="green-mode" class="theme-dot"></div>
+                        <div id="purple-mode" class="theme-dot"></div>
+                    </div>
+
+                    <p id="settings-note">*Your fav theme will be saved for <br> your next visit :D</p>
                 </div>
 
                 <div class="right-column">
