--- a/index.html
+++ b/index.html
@@ -138,8 +138,7 @@
                     </ul>
 
                 </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
-                    sed do eiusmod tempor incididunt: <a target="_blank" href="resume.pdf">Download Resume</a></p>
+                <p>Here is Link to Dowmload my Resume for more details: <a target="_blank" href="resume.pdf">Download Resume</a></p>
 
             </div>
         </div>
